HP PhotoSmart P1000
HP DeskJet 1100C
HP PhotoSmart P1100
HP DeskJet 1120C
HP DeskJet 1200C
HP DeskJet 1220C
HP DeskJet 1600C
HP DeskJet 2000 series
HP DeskJet 2500 series
HP LaserJet II series
HP LaserJet IIP series
HP LaserJet III series
HP LaserJet 4 series
HP LaserJet 4V, 4Si
HP LaserJet 5 series
HP LaserJet 5Si
HP LaserJet 6 series
Lexmark 4076
Lexmark Z42
Lexmark Z43
Lexmark Z52
Lexmark Z53
Olympus P-10
Olympus P-200
Olympus P-300 series
Olympus P-400
Olympus P-440
Sony UP-DP10    (Experimental)

The following is the complete list of printers believed to be
compatible with Gutenprint, along with recommended drivers.  Some of
these printers may work only partially; the specified drivers may not
support the full range of resolutions, paper sizes, media sources,
etc. that some of these printers may offer.

Printer Name                   Driver Name     Driver Description
------- ----                   ------ ----     ------ -----------
Apollo P-2100                  pcl-690         HP DeskJet 690 series
Apollo P-2150                  pcl-690         HP DeskJet 690 series
Apollo P-2200                  pcl-690         HP DeskJet 690 series
Apollo P-2250                  pcl-690         HP DeskJet 690 series
Apollo P-2500                  pcl-690         HP DeskJet 690 series
Apollo P-2550                  pcl-690         HP DeskJet 690 series
Apollo P-2600                  pcl-690         HP DeskJet 690 series
Apollo P-2650                  pcl-690         HP DeskJet 690 series
Apple Color StyleWriter 4100   pcl-apple-4100  HP LaserJet II series
Apple Color StyleWriter 4500   pcl-apple-4500  HP LaserJet II series
Apple Color StyleWriter 6500   pcl-apple-6500  HP LaserJet II series
Apple LaserWriter Select 360   pcl-2           HP LaserJet II series
Brother DCP-1200               pcl-2           HP LaserJet II series
Brother HL-4Ve                 pcl-2           HP LaserJet II series
Brother HL-10h                 pcl-4           HP LaserJet 4 series