@@ -4,7 +4,7 @@
    XML description of printers known to libgutenprint
    This file was originally generated.  It should be edited by hand.
 
-   "$Id: printers.xml,v 1.129 2005/10/01 18:47:29 rlk Exp $"
+   "$Id: printers.xml,v 1.130 2005/10/21 08:55:40 m0m Exp $"
 -->
 
 <gutenprint xmlns="http://gimp-print.sourceforge.net/xsd/gp.xsd-1.0"
@@ -1338,6 +1338,8 @@
       <printer name="Canon CP220" driver="canon-cp220" manufacturer="Canon" model="1001">
       </printer>
       <printer name="Sony UP-DP10" driver="sony-updp10" manufacturer="Sony" model="2000">
+      </printer>
+      <printer name="Sony UP-DR150" driver="sony-updr150" manufacturer="Sony" model="2001">
       </printer>
       <printer name="Fujifilm Printpix CX-400" driver="fujifilm-cx400" manufacturer="Fujifilm" model="3000">
       </printer>
